[package]
name = "swc_atoms"
build = "build.rs"
version = "0.2.3"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
documentation = "https://swc-project.github.io/rustdoc/swc_atoms/"
description = "Atoms for the swc project."
edition = "2018"

[dependencies]
string_cache = "0.8"

[build-dependencies]
string_cache_codegen = "0.5"
