[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
description = "Atoms for the swc project."
documentation = "https://rustdoc.swc.rs/swc_atoms/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_atoms"
repository = "https://github.com/swc-project/swc.git"
version = "0.2.6"

[dependencies]
string_cache = "0.8"

[build-dependencies]
string_cache_codegen = "0.5"
