[workspace]
members = [
  "binding_core_node",
  "binding_core_wasm",
  "binding_html_node",
  "binding_minifier_node",
  "binding_minifier_wasm",
  "binding_typescript_wasm",
  "swc_cli",
]
resolver = "2"

  [workspace.package]
  edition    = "2021"
  license    = "Apache-2.0"
  repository = "https://github.com/swc-project/swc.git"


  [workspace.dependencies]
  anyhow               = "1.0.86"
  backtrace            = "0.3"
  getrandom            = "0.2.15"
  js-sys               = "0.3.77"
  lightningcss         = "1.0.0-alpha.58"
  miette               = "7.5.0"
  napi                 = { version = "2", default-features = false }
  napi-build           = "2"
  napi-derive          = { version = "2", default-features = false }
  par-core             = "1.0.0"
  path-clean           = "1.0"
  quote                = "1"
  rustc-hash           = "2"
  serde                = "1"
  serde-wasm-bindgen   = "0.6.5"
  serde_json           = "1.0.120"
  sourcemap            = "8.0.1"
  swc_atoms            = { path = "../crates/swc_atoms" }
  swc_cli_impl         = { path = "../crates/swc_cli_impl" }
  swc_common           = { path = "../crates/swc_common" }
  swc_compiler_base    = { path = "../crates/swc_compiler_base" }
  swc_config           = { path = "../crates/swc_config" }
  swc_core             = { path = "../crates/swc_core" }
  swc_css_ast          = { path = "../crates/swc_css_ast" }
  swc_css_codegen      = { path = "../crates/swc_css_codegen" }
  swc_css_minifier     = { path = "../crates/swc_css_minifier" }
  swc_css_parser       = { path = "../crates/swc_css_parser" }
  swc_error_reporters  = { path = "../crates/swc_error_reporters" }
  swc_fast_ts_strip    = { path = "../crates/swc_fast_ts_strip" }
  swc_html             = { path = "../crates/swc_html" }
  swc_html_ast         = { path = "../crates/swc_html_ast" }
  swc_html_minifier    = { path = "../crates/swc_html_minifier" }
  swc_malloc           = { path = "../crates/swc_malloc" }
  swc_nodejs_common    = { path = "../crates/swc_nodejs_common" }
  tracing              = "0.1.40"
  tracing-chrome       = "0.7.2"
  tracing-futures      = "0.2.5"
  tracing-subscriber   = "0.3.18"
  wasm-bindgen         = "0.2.92"
  wasm-bindgen-futures = "0.4.42"

[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
lto = "fat"

# debug = true
# opt-level = 'z'

# Strip debug symbols
strip = "symbols"

  [profile.release.package]

    [profile.release.package.wasmer-wasix]
    opt-level = "s"

    [profile.release.package.cranelift-codegen]
    opt-level = "s"

    [profile.release.package.swc_ecma_minifier]
    opt-level = 3

    [profile.release.package.swc]
    opt-level = 3

    [profile.release.package.swc_ecma_compat_es2015]
    opt-level = "s"

    [profile.release.package.swc_ecma_parser]
    opt-level = 3

    [profile.release.package.wast]
    opt-level = "s"

    [profile.release.package.wasmparser]
    opt-level = "s"

    [profile.release.package.browserslist-rs]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_module]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_proposal]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_optimization]
    opt-level = 3

    [profile.release.package.swc_ecma_ast]
    opt-level = 3

    [profile.release.package.swc_ecma_transforms_base]
    opt-level = 3

    [profile.release.package.webc]
    opt-level = "s"

    [profile.release.package.swc_ecma_compat_es2022]
    opt-level = "s"

    [profile.release.package.regex-automata]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_typescript]
    opt-level = 3

    [profile.release.package.clap]
    opt-level = "s"

    [profile.release.package.swc_cli_impl]
    opt-level = "s"

    [profile.release.package.wasmer-config]
    opt-level = "s"

    [profile.release.package.swc_ecma_utils]
    opt-level = 3

    [profile.release.package.wasmer-compiler]
    opt-level = "s"


[profile.dev.package."*"]
debug-assertions = false
