[workspace]
members = [
  "binding_core_node",
  "binding_core_wasm",
  "binding_html_node",
  "binding_minifier_node",
  "binding_minifier_wasm",
  "binding_typescript_wasm",
  "binding_react_compiler_node",
  "swc_cli",
]
resolver = "2"

  [workspace.package]
  edition    = "2021"
  license    = "Apache-2.0"
  repository = "https://github.com/swc-project/swc.git"


  [workspace.dependencies]
  anyhow                  = "1.0.98"
  backtrace               = "0.3"
  getrandom               = "0.3.3"
  js-sys                  = "0.3.77"
  lightningcss            = "1.0.0-alpha.66"
  miette                  = "7.6.0"
  napi                    = { version = "3", default-features = false }
  napi-build              = "2"
  napi-derive             = { version = "3", default-features = false }
  owo-colors              = "4.2.1"
  par-core                = "2.0.0"
  path-clean              = "1.0"
  quote                   = "1"
  rustc-hash              = "2"
  serde                   = "1"
  serde-wasm-bindgen      = "0.6.5"
  serde_json              = "1.0.140"
  swc_atoms               = "7.0.0"
  swc_cli_impl            = "40.0.0"
  swc_common              = "14.0.3"
  swc_compiler_base       = "34.0.0"
  swc_config              = "3.1.1"
  swc_core                = "40.0.0"
  swc_css_ast             = "14.0.0"
  swc_css_codegen         = "14.0.0"
  swc_css_minifier        = "14.0.0"
  swc_css_parser          = "14.0.0"
  swc_ecma_react_compiler = "8.0.0"
  swc_error_reporters     = "16.0.1"
  swc_html                = "26.0.0"
  swc_html_ast            = "14.0.0"
  swc_html_minifier       = "32.0.0"
  swc_malloc              = "1.2.3"
  swc_nodejs_common       = "1.0.2"
  swc_sourcemap           = "9.3.4"
  swc_ts_fast_strip       = "32.0.0"
  tracing                 = "0.1.41"
  tracing-chrome          = "0.7.2"
  tracing-futures         = "0.2.5"
  tracing-subscriber      = "0.3.20"
  unicode-width           = "0.2.1"
  wasm-bindgen            = "0.2.100"
  wasm-bindgen-futures    = "0.4.50"

[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
lto = "fat"

# debug = true
# opt-level = 'z'

# Strip debug symbols
strip = "symbols"

  [profile.release.package]

    [profile.release.package.wasmer-wasix]
    opt-level = "s"

    [profile.release.package.cranelift-codegen]
    opt-level = "s"

    [profile.release.package.swc_ecma_minifier]
    opt-level = 3

    [profile.release.package.swc]
    opt-level = 3

    [profile.release.package.swc_ecma_compat_es2015]
    opt-level = "s"

    [profile.release.package.swc_ecma_parser]
    opt-level = 3

    [profile.release.package.wast]
    opt-level = "s"

    [profile.release.package.wasmparser]
    opt-level = "s"

    [profile.release.package.browserslist-rs]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_module]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_proposal]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_optimization]
    opt-level = 3

    [profile.release.package.swc_ecma_ast]
    opt-level = 3

    [profile.release.package.swc_ecma_transforms_base]
    opt-level = 3

    [profile.release.package.webc]
    opt-level = "s"

    [profile.release.package.swc_ecma_compat_es2022]
    opt-level = "s"

    [profile.release.package.regex-automata]
    opt-level = "s"

    [profile.release.package.swc_ecma_transforms_typescript]
    opt-level = 3

    [profile.release.package.clap]
    opt-level = "s"

    [profile.release.package.swc_cli_impl]
    opt-level = "s"

    [profile.release.package.wasmer-config]
    opt-level = "s"

    [profile.release.package.swc_ecma_utils]
    opt-level = 3

    [profile.release.package.wasmer-compiler]
    opt-level = "s"


[profile.dev.package."*"]
debug-assertions = false
